# benford-gan-detection

./: .gitignore  LICENSE  README.md  config_ex.yml  main.py  pyproject.toml
benford_gan/: Untitled.ipynb  config.py  core.py  helper.py  main.ipynb  main.py  model.py  qtable.py
