[tool.poetry]
name = "syde-672-project"
version = "0.1.0"
description = "Detecting GAN-generated images using Benford's Law. This is an implementation of the paper authored by Nicolò Bonettini et. al."
authors = ["Sepehr Ghavam"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
scikit-learn = "^0.23.1"
scipy = "^1.5.4"
pillow = "^8.0.1"
jax = "^0.2.6"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
